# coq-hol-light-real-with-N

./: AUTHORS.md  CHANGES.md  CONFIG  Makefile  README.md  coq-hol-light-real-with-N.opam  deps.mk  hol_lib_upto_real.ml  hol_upto_real.ml  logic.v  mappings.lp  mappings.mk  mappings.v  reproduce  terms.v  theorems.v  theory_hol.v  type.v
.github/workflows/: docker-action.yml  main.yml
